--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body,
 body,
 input,
 select,
+button,
 textarea {
   font-size: 1.6rem;
   font-family: Arial, Helvetica, sans-serif;
@@ -23,6 +24,11 @@ textarea {
   grid-template-rows: 5rem 1fr 5rem;
   grid-template-columns: 1fr;
   height: 100%;
+}
+
+a {
+  text-decoration: none;
+  color: #203040;
 }
 
 a:hover {
@@ -37,10 +43,10 @@ header {
   align-items: center;
 }
 
-header, 
-a {
+.brand {
   color: #FFFFFF;
   text-decoration: none;
+  padding: 5px;
 }
 
 main {
@@ -54,4 +60,82 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.content {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.main {
+  flex: 3 60rem
+}
+
+.sidebar {
+  flex: 1 20rem
+}
+
+/* Products */
+
+.products {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+
+.products li {
+  flex: 1 1 29rem;
+  height: 47rem;
+  padding: 1rem;
+  margin: 1rem;
+}
+
+.product {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.product img {
+  max-width: 37rem;
+  max-height: 37rem;
+}
+
+.product-price {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.product-price div,
+.product-price button {
+  text-align: center;
+  flex: 1;
+}
+
+.product-price div {
+  font-size: 2rem;
+}
+
+button {
+  cursor: pointer;
+}
+
+.button {
+  padding: 1rem;
+  border: .1rem #C0C0C0 solid;
+  background-color: #F0F0F0;
+}
+
+.button:hover {
+  border: .1rem #808080 solid;
+}
+
+.button.primary {
+  background-color: #ffc000;
 }
