--- a/src/index.css
+++ b/src/index.css
@@ -153,3 +153,56 @@ button {
 .filter div {
   flex: 1;
 }
+
+/* Cart */
+
+.cart {
+  padding: 1rem;
+  margin: 1rem;
+  display: flex;
+}
+
+.cart-header {
+  border-bottom: .1rem #C0C0C0 solid;
+}
+
+.cart-item {
+  padding: 0;
+  width: 100%;
+  list-style-type: none;
+}
+
+.cart-item img {
+  width: 5rem;
+}
+
+.cart-item li {
+  display: flex;
+}
+
+.cart-item li div {
+  padding: 0.5rem;
+}
+
+.cart-item li div:last-child {
+  flex: 1;
+}
+
+.right {
+  text-align: right;
+}
+
+.total {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.total > div {
+  font-size: 2rem;
+}
+.total > div,
+.total > button {
+  flex: 1;
+}
