--- a/src/index.css
+++ b/src/index.css
@@ -206,3 +206,24 @@ button {
 .total > button {
   flex: 1;
 }
+
+/* Checkout Form */
+
+.form-container {
+  width: 100%;
+  padding: 0;
+  list-style-type: none;
+}
+
+.form-container li {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  max-width: 320px;
+}
+
+input {
+  width: 100%;
+  padding: 1rem;
+  border: 0.1rem #C0C0C0 solid;
+}
